# miniclosure

./: .gitignore  Cargo.toml  README.md
src/: closure_holder.rs  lib.rs
