[package]
name = "miniclosure"
version = "0.1.0"
authors = ["N/A <N/A>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
static_assertions = "1.1"
strum = "0.18"
strum_macros = "0.18.0"
num-traits  = "0.2"
num-derive = "0.2"
